cmake_minimum_required(VERSION 3.14)

project(vector_blf_library LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_library(vector_blf_library STATIC
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/AbstractFile.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/AfdxFrame.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/AfdxStatistic.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/AppText.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/AppTrigger.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanDriverErrorExt.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanDriverError.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanDriverHwSync.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanDriverStatistic.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanErrorFrameExt.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanErrorFrame.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanFdErrorFrame64.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanFdMessage64.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanFdMessage.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanMessage2.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanMessage.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanOverloadFrame.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CompressedFile.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/DriverOverrun.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/EnvironmentVariable.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/EthernetFrame.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/EthernetRxError.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/EthernetStatus.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/EventComment.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FileStatistics.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/File.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayData.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayStatusEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRaySync.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayV6Message.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayV6StartCycleEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayVFrError.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayVFrReceiveMsgEx.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayVFrReceiveMsg.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayVFrStartCycle.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayVFrStatus.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/GlobalMarker.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/GpsEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/J1708Message.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/KLineStatusEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinBaudrateEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinBusEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinChecksumInfo.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinCrcError2.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinCrcError.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinDatabyteTimestampEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinDisturbanceEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinDlcInfo.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinLongDomSignalEvent2.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinLongDomSignalEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinMessage2.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinMessageDescriptor.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinMessage.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinReceiveError2.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinReceiveError.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSchedulerModeChange.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSendError2.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSendError.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinShortOrSlowResponse.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSlaveTimeout.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSleepModeEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSpikeEvent2.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSpikeEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinStatisticEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSyncError2.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSyncError.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSynchFieldEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinUnexpectedWakeup.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinWakeupEvent2.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinWakeupEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LogContainer.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most150AllocTab.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most150MessageFragment.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most150Message.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most150PktFragment.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most150Pkt.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most50Message.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most50Pkt.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostAllocTab.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostCtrl.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostDataLost.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostEcl.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostEthernetPktFragment.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostEthernetPkt.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostGenReg.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostHwMode.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostLightLock.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostNetState.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostPkt2.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostPkt.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostReg.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostSpy.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostStatisticEx.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostStatistic.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostStress.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostSystemEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostTrigger.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostTxLight.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/ObjectHeader2.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/ObjectHeaderBase.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/ObjectHeader.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/RealtimeClock.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/SerialEvent.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/SystemVariable.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/UncompressedFile.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/WlanFrame.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/WlanStatistic.cpp
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/AbstractFile.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/AfdxFrame.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/AfdxStatistic.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/AppText.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/AppTrigger.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanDriverErrorExt.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanDriverError.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanDriverHwSync.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanDriverStatistic.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanErrorFrameExt.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanErrorFrame.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanFdErrorFrame64.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanFdMessage64.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanFdMessage.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanMessage2.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanMessage.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CanOverloadFrame.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/CompressedFile.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/DriverOverrun.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/EnvironmentVariable.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/EthernetFrame.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/EthernetRxError.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/EthernetStatus.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/EventComment.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FileStatistics.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/File.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayData.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayStatusEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRaySync.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayV6Message.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayV6StartCycleEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayVFrError.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayVFrReceiveMsgEx.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayVFrReceiveMsg.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayVFrStartCycle.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/FlexRayVFrStatus.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/GlobalMarker.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/GpsEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/J1708Message.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/KLineStatusEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinBaudrateEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinBusEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinChecksumInfo.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinCrcError2.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinCrcError.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinDatabyteTimestampEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinDisturbanceEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinDlcInfo.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinLongDomSignalEvent2.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinLongDomSignalEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinMessage2.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinMessageDescriptor.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinMessage.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinReceiveError2.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinReceiveError.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSchedulerModeChange.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSendError2.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSendError.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinShortOrSlowResponse.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSlaveTimeout.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSleepModeEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSpikeEvent2.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSpikeEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinStatisticEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSyncError2.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSyncError.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinSynchFieldEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinUnexpectedWakeup.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinWakeupEvent2.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LinWakeupEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/LogContainer.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most150AllocTab.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most150MessageFragment.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most150Message.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most150PktFragment.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most150Pkt.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most50Message.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/Most50Pkt.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostAllocTab.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostCtrl.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostDataLost.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostEcl.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostEthernetPktFragment.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostEthernetPkt.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostGenReg.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostHwMode.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostLightLock.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostNetState.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostPkt2.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostPkt.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostReg.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostSpy.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostStatisticEx.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostStatistic.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostStress.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostSystemEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostTrigger.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/MostTxLight.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/ObjectHeader2.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/ObjectHeaderBase.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/ObjectHeader.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/platform.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/RealtimeClock.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/SerialEvent.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/SystemVariable.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/VectorTypes.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/UncompressedFile.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/WlanFrame.h
   ../../../libraries/vector_blf-1.0.0/src/Vector/BLF/WlanStatistic.h
)

target_compile_definitions(vector_blf_library PRIVATE VECTOR_BLF_LIBRARY_LIBRARY)
